--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=${port:8080}
 spring.rabbitmq.host=rabbitmq
-endpoints.health.enabled=false
+endpoints.health.enabled=true
+endpoints.metrics.enabled=true
+management.endpoints.enabled-by-default=false
+spring.jmx.enabled=true
+management.endpoint.info.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoint.env.enabled=true
